@@ -16,15 +16,18 @@ chdir $dir or die "failed to chdir: $!";
 my $path = 'git-dv.txt';
 append($path, 'foo');
 
-system { $_->[0] } @$_ for (
+# for debugging test reports:
+sub exe { local $, = ' '; chomp(my $out = qx/@_/); diag "@_: $out ($?)"; }
+
+exe(@$_) for (
   [qw(git init)],
   [qw(git add), $path],
-  [qw(git commit -m foo)],
+  [qw(git commit -q -m foo)],
   [qw(git tag -a -m v1 v1.001)],
 );
 
 append($path, 'bar');
-system { 'git' } (qw(git commit -m bar), $path);
+exe(qw(git commit -q -m bar), $path);
 
 my $exp_version = '1.001001';
 
