@@ -2,6 +2,8 @@ Revision history for Git::DescribeVersion
 
 {{$NEXT}}
 
+  - Display git command output in tests for debugging reports
+
 1.010     2011-10-19T20:31:43Z
 
   - Fallback to another git wrapper if one fails.
